8231413: Several test/hotspot/jtreg/runtime tests updates to run with --illegal-access=deny
Reviewed-by: hseigel, lfoltan, dholmes